# XLink

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  XLink.cmake
.github/workflows/: .dev.workflow.yml
cmake/: BuildModes.cmake  Flags.cmake  XLink.cmake  XLinkConfig.cmake.in  XLinkDependencies.cmake
cmake/Hunter/: config.cmake
examples/: CMakeLists.txt  boot_bootloader.cpp  boot_firmware.cpp  compile.sh  device_connect_reset.cpp  find_device.cpp  list_devices.cpp  search_devices.cpp  xlink_client_local  xlink_client_local.cpp  xlink_server  xlink_server.cpp  xlink_server2.cpp  xlink_server_local  xlink_server_local.cpp  xlink_usb_client.cpp  xlink_usb_server.cpp
include/XLink/: XLink.h  XLinkDispatcher.h  XLinkDispatcherImpl.h  XLinkErrorUtils.h  XLinkLog.h  XLinkMacros.h  XLinkPlatform.h  XLinkPlatformErrorUtils.h  XLinkPrivateDefines.h  XLinkPrivateFields.h  XLinkPublicDefines.h  XLinkSemaphore.h  XLinkStream.h  XLinkTime.h  XLinkVersion.h
pc/: PlatformData.c  PlatformDeviceControl.c  PlatformDeviceSearch.c  UsbDevices.cpp
pc/Win/include/: win_semaphore.h  win_time.h  win_usb.h
pc/Win/src/: win_time.c  win_usb.c
pc/protocols/: pcie_host.c  tcpip_host.c  tcpip_host.h  usb_boot.c  usb_boot.h  usb_host.cpp  usb_host.h  usb_mx_id.c  usb_mx_id.h
shared/include/: XLink.h  XLinkDispatcher.h  XLinkLog.h  XLinkPlatform.h  XLinkPrivateDefines.h  XLinkPublicDefines.h
shared/include/XLink/: XLink.h  XLinkPlatform.h  XLinkPrivateDefines.h  XLinkPublicDefines.h
shared/src/: XLinkData.c  XLinkDeprecated.c  XLinkDevice.c  XLinkDispatcher.c  XLinkDispatcherImpl.c  XLinkLog.c  XLinkPrivateDefines.c
src/pc/: PlatformData.c  PlatformData.cpp  PlatformDeviceControl.c  PlatformDeviceControl.cpp  PlatformDeviceFd.cpp  PlatformDeviceFd.h  PlatformDeviceSearch.c  PlatformDeviceSearch.cpp  PlatformDeviceSearchDynamic.cpp  ProtocolManager.cpp
src/pc/Android/: ifaddrs.c
src/pc/MacOS/: pthread_semaphore.cpp
src/pc/Win/include/: win_pthread.h  win_semaphore.h  win_synchapi.h  win_time.h  win_usb.h
src/pc/Win/src/: win_pthread.cpp  win_semaphore.c  win_synchapi.c  win_time.c  win_time.cpp  win_usb.c  win_usb_host.cpp
src/pc/protocols/: local_memshd.cpp  local_memshd.h  pcie_host.c  pcie_host.cpp  pcie_host.h  tcpip_host.c  tcpip_host.cpp  tcpip_host.h  tcpip_memshd.cpp  tcpip_memshd.h  usb_boot.c  usb_boot.h  usb_host.cpp  usb_host.h  usb_host_ep.cpp  usb_host_ep.h  usb_mx_id.c  usb_mx_id.cpp  usb_mx_id.h  wrap_libusb.cpp  wrap_libusb.hpp  wrap_libusb.md  wrap_libusb_details.hpp
src/server/: DeviceDiscovery.cpp  Platform.c
src/shared/: LockingQueue.hpp  XLink.cpp  XLinkAssertions.cpp  XLinkCallback.cpp  XLinkCallback.h  XLinkData.c  XLinkData.cpp  XLinkDeprecated.c  XLinkDevice.c  XLinkDevice.cpp  XLinkDispatcher.c  XLinkDispatcher.cpp  XLinkDispatcherImpl.c  XLinkDispatcherImpl.cpp  XLinkLog.c  XLinkLog.cpp  XLinkPrivateDefines.c  XLinkPrivateDefines.cpp  XLinkPrivateFields.c  XLinkSemaphore.c  XLinkStream.c  XLinkStringUtils.c  XLinkTime.cpp
tests/: CMakeLists.txt  connect_timeout_test.cpp  connection_shutdown_test.cpp  multiple_connection_test.cpp  multiple_open_stream.cpp  multiple_open_stream_server.cpp  multiple_open_stream_test.cpp  multithreading_search_test.cpp  rtt_test.cpp  throughput_test.cpp
tests/bash/: connect_timeout_test.sh  multiple_connection_test.sh  multiple_connection_test_1.sh  multiple_connection_test_2.sh  multiple_connection_test_3.sh  test_client_server.sh  timeout.sh
tests/cmake/: multiple_connection_test.cmake  test_client_server.cmake
